# encrypticon

./: pyproject.toml
encrypticon/: __main__.py  app.py  utils.py
tests/: test_utils.py
