[tool.poetry]
name = "encrypticon"
version = "0.1.0"
description = ""
authors = ["platonlukyanov <platonioluka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "^39.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
